--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
 	HelloWorld
     <div id="ajax-contents"></div>
-    <button type="button" onclick="addPtag()">add Ptag=></button>
+    <button type="button" onclick="addPtag()">add Ptag</button>
 </body>
 </html>
