--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<script src='https://code.jquery.com/jquery-1.12.3.min.js'></script>
-    <title>Test</titlle>
+	<title>Test</title>
+	<link rel="stylesheet" href="">
+	<script type="text/javascript">
+		function addPtag(){
+			$.ajax({
+				url:'/ajax.html'
+				success:function(result){
+					$('#ajax-con').append(result);
+				}
+			})
+		}
+	</script>
 </head>
 <body>
-	HelloWorld
-    <div id="ajax-contents"></div>
-    <button type="button" onclick="addPtag()">add Ptag</button>
+	Hello World
+	<div id='ajax-con'></div>
+	<button type="button" onclick="addPtag()">add ptag</button>
 </body>
 </html>
